--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
 
 
 
-    <groupId>org.scijava</groupId>
+<!--    <groupId>org.scijava</groupId>-->
+    <groupId>org.azgra</groupId>
     <artifactId>DataCompressor</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
