--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
 
+    <parent>
+        <groupId>org.scijava</groupId>
+        <artifactId>pom-scijava</artifactId>
+        <version>26.0.0</version>
+        <relativePath/>
+    </parent>
 
-<!--    <groupId>org.scijava</groupId>-->
+    <!--    <groupId>org.scijava</groupId>-->
     <groupId>org.azgra</groupId>
     <artifactId>DataCompressor</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -22,6 +28,13 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>scijava.public</id>
+            <url>https://maven.scijava.org/content/groups/public</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -44,6 +57,10 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
+        </dependency>
+        <dependency>
+            <groupId>io.scif</groupId>
+            <artifactId>scifio</artifactId>
         </dependency>
     </dependencies>
 
