Refactor input file parsing.
Refactor of input file parsing code, before adding support for tiff files.

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
             <groupId>io.scif</groupId>
             <artifactId>scifio</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
 
 
