--- a/pom.xml
+++ b/pom.xml
@@ -144,11 +144,11 @@
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
         </dependency>
-        <dependency>
-            <groupId>io.scif</groupId>
-            <artifactId>scifio</artifactId>
-            <version>0.37.3</version>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>io.scif</groupId>-->
+        <!--            <artifactId>scifio</artifactId>-->
+        <!--            <version>0.37.3</version>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
